--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+
+
 /* hero image */
 .jumbotron {
   color: white;
@@ -494,4 +497,79 @@ body.hero-anime #switch {
     background-color: #000;
     vertical-align: 0;
     transition: all 200ms linear;
+  }
+
+
+
+  /* social media icon test */
+  a,
+  a:hover {
+    color: #000;
+    text-decoration: none;
+    padding: 5px;
+  }
+
+  .socialbtnsbtnsbtns,
+  .socialbtnsbtnsbtns ul,
+  .socialbtnsbtnsbtns li {
+    margin: 0;
+    padding: 5px;
+  }
+
+  .socialbtnsbtnsbtns li {
+    list-style: none outside none;
+    display: inline-block;
+  }
+
+  .socialbtns li {
+    list-style: none outside none;
+    display: inline-block;
+  }
+
+  .socialbtns .fa {
+    color: #FFF;
+    text-shadow: 1px 1px 0px #000,
+      1px -1px 0px #000,
+      -1px 1px 0px #000,
+      -1px -1px 0px #000;
+    -webkit-text-shadow: 1px 1px 0px #000,
+      1px -1px 0px #000,
+      -1px 1px 0px #000,
+      -1px -1px 0px #000;
+    -moz-text-shadow: 1px 1px 0px #000,
+      1px -1px 0px #000,
+      -1px 1px 0px #000,
+      -1px -1px 0px #000;
+    -o-text-shadow: 1px 1px 0px #000,
+      1px -1px 0px #000,
+      -1px 1px 0px #000,
+      -1px -1px 0px #000;
+    transition: all ease-out 0.5s;
+    -moz-transition: all ease-out 0.5s;
+    -webkit-transition: all ease-out 0.5s;
+    -o-transition: all ease-out 0.5s;
+  }
+
+  .socialbtns .fa:hover {
+    color: #000;
+    text-shadow: 1px 1px 0px #fff,
+      1px -1px 0px #fff,
+      -1px 1px 0px #fff,
+      -1px -1px 0px #fff;
+    -webkit-text-shadow: 1px 1px 0px #fff,
+      1px -1px 0px #fff,
+      -1px 1px 0px #fff,
+      -1px -1px 0px #fff;
+    -moz-text-shadow: 1px 1px 0px #fff,
+      1px -1px 0px #fff,
+      -1px 1px 0px #fff,
+      -1px -1px 0px #fff;
+    -o-text-shadow: 1px 1px 0px #fff,
+      1px -1px 0px #fff,
+      -1px 1px 0px #fff,
+      -1px -1px 0px #fff;
+    transition: all ease 0.5s;
+    -moz-transition: all ease-in 0.5s;
+    -webkit-transition: all ease-in 0.5s;
+    -o-transition: all ease-in 0.5s;
   }
