--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,3 @@
-@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
-
-
 /* hero image */
 .jumbotron {
   color: white;
@@ -9,7 +6,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 80vh;
-  position: relative;
 }
 
 
@@ -486,7 +482,7 @@ body.hero-anime #switch {
     vertical-align: 0;
   }
 
-    {
+  .dropdown-toggle::after {
     position: absolute;
     display: block;
     top: 10px;
@@ -500,77 +496,20 @@ body.hero-anime #switch {
     transition: all 200ms linear;
   }
 
-
-
-  /* social media icon test */
-  a,
-  a:hover {
-    color: #000;
-    text-decoration: none;
-    padding: 5px;
+  .dropdown-toggle[aria-expanded="true"]::after {
+    transform: rotate(90deg);
+    opacity: 0;
   }
 
-  .socialbtnsbtnsbtns,
-  .socialbtnsbtnsbtns ul,
-  .socialbtnsbtnsbtns li {
-    margin: 0;
-    padding: 5px;
+  .dropdown-menu {
+    padding: 0 !important;
+    background-color: transparent;
+    box-shadow: none;
+    transition: all 200ms linear;
   }
 
-  .socialbtnsbtnsbtns li {
-    list-style: none outside none;
-    display: inline-block;
+  .dropdown-toggle[aria-expanded="true"]+.dropdown-menu {
+    margin-top: 10px !important;
+    margin-bottom: 20px !important;
   }
-
-  .socialbtns li {
-    list-style: none outside none;
-    display: inline-block;
-  }
-
-  .socialbtns .fa {
-    color: #FFF;
-    text-shadow: 1px 1px 0px #000,
-      1px -1px 0px #000,
-      -1px 1px 0px #000,
-      -1px -1px 0px #000;
-    -webkit-text-shadow: 1px 1px 0px #000,
-      1px -1px 0px #000,
-      -1px 1px 0px #000,
-      -1px -1px 0px #000;
-    -moz-text-shadow: 1px 1px 0px #000,
-      1px -1px 0px #000,
-      -1px 1px 0px #000,
-      -1px -1px 0px #000;
-    -o-text-shadow: 1px 1px 0px #000,
-      1px -1px 0px #000,
-      -1px 1px 0px #000,
-      -1px -1px 0px #000;
-    transition: all ease-out 0.5s;
-    -moz-transition: all ease-out 0.5s;
-    -webkit-transition: all ease-out 0.5s;
-    -o-transition: all ease-out 0.5s;
-  }
-
-  .socialbtns .fa:hover {
-    color: #000;
-    text-shadow: 1px 1px 0px #fff,
-      1px -1px 0px #fff,
-      -1px 1px 0px #fff,
-      -1px -1px 0px #fff;
-    -webkit-text-shadow: 1px 1px 0px #fff,
-      1px -1px 0px #fff,
-      -1px 1px 0px #fff,
-      -1px -1px 0px #fff;
-    -moz-text-shadow: 1px 1px 0px #fff,
-      1px -1px 0px #fff,
-      -1px 1px 0px #fff,
-      -1px -1px 0px #fff;
-    -o-text-shadow: 1px 1px 0px #fff,
-      1px -1px 0px #fff,
-      -1px 1px 0px #fff,
-      -1px -1px 0px #fff;
-    transition: all ease 0.5s;
-    -moz-transition: all ease-in 0.5s;
-    -webkit-transition: all ease-in 0.5s;
-    -o-transition: all ease-in 0.5s;
-  }
+}
