--- a/css/index.css
+++ b/css/index.css
@@ -513,3 +513,157 @@ body.hero-anime #switch {
     margin-bottom: 20px !important;
   }
 }
+
+
+
+
+/* 
+footer */
+
+.site-footer {
+  background-color: #FFA500;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+}
+
+.site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5
+}
+
+.site-footer hr.small {
+  margin: 20px 0
+}
+
+.site-footer h6 {
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px
+}
+
+.site-footer a {
+  color: #737373;
+}
+
+.site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+
+.footer-links {
+  padding-left: 0;
+  list-style: none
+}
+
+.footer-links li {
+  display: block
+}
+
+.footer-links a {
+  color: #737373
+}
+
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+
+.footer-links.inline li {
+  display: inline-block
+}
+
+.site-footer .social-icons {
+  text-align: right
+}
+
+.site-footer .social-icons a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d
+}
+
+.copyright-text {
+  margin-top: 30px;
+  margin-left: 100px;
+}
+
+@media (max-width:991px) {
+  .site-footer [class^=col-] {
+    margin-bottom: 30px
+  }
+}
+
+@media (max-width:767px) {
+  .site-footer {
+    padding-bottom: 0
+  }
+
+  .site-footer .copyright-text,
+  .site-footer .social-icons {
+    text-align: center
+  }
+}
+
+
+.news-container {
+  font-family: sans-serif;
+  border-radius: 5px;
+  min-height: 150px;
+  position: relative;
+  max-width: 350px;
+  margin: 0 auto;
+  background-color: white;
+  padding: 20px;
+  transition: all .5s ease-in-out;
+}
+
+
+
+h3 {
+  color: #496068;
+  margin: 10px 0;
+  text-align: center;
+}
+
+form {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: grid;
+  grid-template: 50px / 75% 25%;
+  border-radius: 0 0 5px 5px;
+}
+
+input {
+  border: none;
+  outline: none;
+}
+
+#email {
+  padding-left: 5px;
+  background-color: whitesmoke;
+  border-radius: 0 0 0 5px;
+  text-align: center;
+}
+
+input[type="submit"] {
+  color: #496068;
+  cursor: pointer;
+  background-color: #ccc;
+  transition: all .3s linear;
+}
+
+input[type="submit"]:hover {
+  background-color: #496068;
+  color: white;
+}
