--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,6 @@
-.sweeterstuff {
-  border-left: 1px dashed #333;
+.menu1 .menu2 .menu3 .menu4 {
+  border-left: 2px solid black;
 }
-
 
 /* 
 footer */
