--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,14 @@
-.menu1 {
-  border-left: 2px solid black;
-}
-
-.menu2 {
-  border-left: 2px solid black;
-}
-
-.menu3 {
-  border-left: 2px solid black;
-}
-
+.menu1,
+.menu2,
+.menu3,
 .menu4 {
   border-left: 2px solid black;
 }
 
+
 h2 {
   transform: rotate(-90deg);
+  position: absolute;
 }
 
 /* 
