--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,3 @@
-.menu1,
-.menu2,
-.menu3,
-.menu4 {
-  border-left: 2px solid black;
-}
-
-
-h2 {
-  transform: rotate(-90deg);
-  position: absolute;
-}
-
 /* 
 footer */
 
@@ -160,7 +147,19 @@ input[type="submit"]:hover {
   color: white;
 }
 
+/* menu */
 
+/* h2 {
+  transform: rotate(-90deg);
+  position: absolute;
+} */
+
+.menu1,
+.menu2,
+.menu3,
+.menu4 {
+  border-left: 2px solid black;
+}
 
 /* hero image */
 .jumbotron {
