--- a/css/index.css
+++ b/css/index.css
@@ -4,19 +4,16 @@
   }
 } */
 
-@media (min-width: 576px) {
+/* @media (max-width: 576px) {
   .menu-header {
     /* transform: rotate(-90deg); */
     position: fixed;
   }
-}
+} */
 
-
-/* 
-footer */
-
+/* footer */
 .site-footer {
-  background-color: #FFA500;
+  background-color: #ffa500;
   padding: 45px 0 20px;
   font-size: 15px;
   line-height: 24px;
@@ -24,11 +21,11 @@ footer */
 
 .site-footer hr {
   border-top-color: #bbb;
-  opacity: 0.5
+  opacity: 0.5;
 }
 
 .site-footer hr.small {
-  margin: 20px 0
+  margin: 20px 0;
 }
 
 .site-footer h6 {
@@ -36,7 +33,7 @@ footer */
   font-size: 16px;
   text-transform: uppercase;
   margin-top: 5px;
-  letter-spacing: 2px
+  letter-spacing: 2px;
 }
 
 .site-footer a {
@@ -50,15 +47,15 @@ footer */
 
 .footer-links {
   padding-left: 0;
-  list-style: none
+  list-style: none;
 }
 
 .footer-links li {
-  display: block
+  display: block;
 }
 
 .footer-links a {
-  color: #737373
+  color: #737373;
 }
 
 .footer-links a:active,
@@ -69,11 +66,11 @@ footer */
 }
 
 .footer-links.inline li {
-  display: inline-block
+  display: inline-block;
 }
 
 .site-footer .social-icons {
-  text-align: right
+  text-align: right;
 }
 
 .site-footer .social-icons a {
@@ -83,30 +80,29 @@ footer */
   margin-left: 6px;
   margin-right: 0;
   border-radius: 100%;
-  background-color: #33353d
+  background-color: #33353d;
 }
 
 .copyright-text {
   margin-top: 30px;
 }
 
-@media (max-width:991px) {
-  .site-footer [class^=col-] {
-    margin-bottom: 30px
+@media (max-width: 991px) {
+  .site-footer [class^="col-"] {
+    margin-bottom: 30px;
   }
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
   .site-footer {
-    padding-bottom: 0
+    padding-bottom: 0;
   }
 
   .site-footer .copyright-text,
   .site-footer .social-icons {
-    text-align: center
+    text-align: center;
   }
 }
-
 
 .news-container {
   font-family: sans-serif;
@@ -117,9 +113,8 @@ footer */
   margin: 0 auto;
   background-color: white;
   padding: 20px;
-  transition: all .5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
-
 
 h3 {
   color: #496068;
@@ -152,7 +147,7 @@ input[type="submit"] {
   color: #496068;
   cursor: pointer;
   background-color: #ccc;
-  transition: all .3s linear;
+  transition: all 0.3s linear;
 }
 
 input[type="submit"]:hover {
@@ -176,13 +171,10 @@ input[type="submit"]:hover {
   border-left: 1px solid black;
 }
 
-
 h3 {
   transform: rotate(-90deg);
   position: absolute;
 }
-
-
 
 /* hero image */
 .jumbotron {
@@ -194,12 +186,11 @@ h3 {
   height: 80vh;
 }
 
-
 body {
   text-decoration: none;
   line-height: 1;
   background-color: white;
-  font-family: 'Questrial', sans-serif;
+  font-family: "Questrial", sans-serif;
 }
 
 .breaker {
@@ -223,15 +214,12 @@ body {
   font-size: 85%;
 }
 
-
 .menu-text {
   border-bottom: 1px dashed;
   text-transform: uppercase;
   font-size: 18px;
   color: black !important;
 }
-
-
 
 /* #Navigation
 ================================================== */
@@ -308,7 +296,7 @@ body {
   background-color: #000;
   top: 0;
   left: 0;
-  content: '';
+  content: "";
   z-index: 2;
   transition: all 300ms linear;
 }
@@ -355,7 +343,7 @@ body {
   left: 0;
   width: 100%;
   height: 2px;
-  content: '';
+  content: "";
   background-color: #8167a9;
   opacity: 0;
   transition: all 200ms linear;
@@ -641,9 +629,6 @@ body.hero-anime #switch {
   transform: translate3d(0, 0px, 0);
 }
 
-
-
-
 /* #Media
 ================================================== */
 
@@ -695,7 +680,7 @@ body.hero-anime #switch {
     transition: all 200ms linear;
   }
 
-  .dropdown-toggle[aria-expanded="true"]+.dropdown-menu {
+  .dropdown-toggle[aria-expanded="true"] + .dropdown-menu {
     margin-top: 10px !important;
     margin-bottom: 20px !important;
   }
