--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 /* @media (max-width: 576px) {
   .menu-header {
     /* transform: rotate(-90deg); */
-    position: fixed;
+/* position: fixed;
   }
 } */
 
