--- a/css/index.css
+++ b/css/index.css
@@ -11,10 +11,19 @@
   }
 } */
 
-.gallery {
+/* .gallery {
   width: auto;
   max-width: 100%;
   height: auto;
+} */
+
+.row > div {
+  padding: 0 4px !important;
+}
+
+img {
+  margin-top: 8px;
+  vertical-align: middle;
 }
 
 /* footer */
