--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,12 @@
   height: auto;
 } */
 
+/* sunflower band graphic */
+.breaker-image {
+  height: 200px;
+  width: 100%;
+}
+
 @media (max-width: 576px) {
   .menu-header {
     display: none;
@@ -214,10 +220,6 @@ body {
   line-height: 1;
   background-color: white;
   font-family: "Questrial", sans-serif;
-}
-
-.breaker {
-  height: 200px;
 }
 
 .fab {
