--- a/css/index.css
+++ b/css/index.css
@@ -17,13 +17,20 @@
   height: auto;
 } */
 
+@media (max-width: 767px) {
+  .menu-1 {
+    margin-top: 5px;
+  }
+}
+
+
 /* sunflower band graphic */
 .breaker-image {
-  height: 150px;
+  /* height: 150px; */
   width: 100%;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 767px) {
   .menu-header {
     display: none;
   }
@@ -31,7 +38,7 @@
 
 /* gallery */
 
-.image > div {
+.image>div {
   padding: 0 4px !important;
 }
 
@@ -705,7 +712,7 @@ body.hero-anime #switch {
     transition: all 200ms linear;
   }
 
-  .dropdown-toggle[aria-expanded="true"] + .dropdown-menu {
+  .dropdown-toggle[aria-expanded="true"]+.dropdown-menu {
     margin-top: 10px !important;
     margin-bottom: 20px !important;
   }
