--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ img {
 
 /* footer */
 .site-footer {
-  background-color: #ffa500;
+  background-color: #c5d9e7;
   padding: 45px 0 20px;
   font-size: 15px;
   line-height: 24px;
@@ -399,7 +399,7 @@ body {
 ================================================== */
 
 .bg-light {
-  background-color: #fff !important;
+  background-color: #c5d9e7 !important;
   transition: all 200ms linear;
 }
 
