--- a/css/index.css
+++ b/css/index.css
@@ -63,6 +63,8 @@ footer {
 footer a {
   color: #fff;
   font-size: 14px;
+  -webkit-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
 
@@ -122,8 +124,6 @@ ul.social-network li {
   display: inline-block;
   position: relative;
   margin: 0 auto 0 auto;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
   border-radius: 50%;
   text-align: center;
   width: 30px;
@@ -142,20 +142,17 @@ ul.social-network li {
   -moz-transform: rotate(360deg);
   -webkit-transform: rotate(360deg);
   -ms--transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
   transform: rotate(360deg);
   -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
   -o-transition: all 0.2s;
-  -ms-transition: all 0.2s;
   transition: all 0.2s;
 }
 
 .social-circle i {
   color: #595959;
   -webkit-transition: all 0.8s;
-  -moz-transition: all 0.8s;
   -o-transition: all 0.8s;
-  -ms-transition: all 0.8s;
   transition: all 0.8s;
 }
 
@@ -340,6 +337,8 @@ img {
   margin: 0 auto;
   background-color: white;
   padding: 20px;
+  -webkit-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
 
@@ -353,7 +352,10 @@ form {
   position: absolute;
   left: 0;
   bottom: 0;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: 50px;
+  -ms-grid-columns: 75% 25%;
   grid-template: 50px / 75% 25%;
   border-radius: 0 0 5px 5px;
 }
@@ -374,6 +376,8 @@ input[type="submit"] {
   color: #496068;
   cursor: pointer;
   background-color: #ccc;
+  -webkit-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
   transition: all 0.3s linear;
 }
 
@@ -399,6 +403,8 @@ input[type="submit"]:hover {
 }
 
 h3 {
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
   transform: rotate(-90deg);
   position: absolute;
 }
@@ -454,23 +460,30 @@ body {
 
 .start-header {
   opacity: 1;
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
   transform: translateY(0);
   padding: 10px 0;
+  -webkit-box-shadow: 0 10px 30px 0 rgba(138, 155, 165, 0.15);
   box-shadow: 0 10px 30px 0 rgba(138, 155, 165, 0.15);
   -webkit-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
 
 .start-header.scroll-on {
+  -webkit-box-shadow: 0 5px 10px 0 rgba(138, 155, 165, 0.15);
   box-shadow: 0 5px 10px 0 rgba(138, 155, 165, 0.15);
   padding: 5px 0;
   -webkit-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
 
 .start-header.scroll-on .navbar-brand img {
   height: 28px;
   -webkit-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
 
@@ -481,6 +494,7 @@ body {
   left: 0;
   z-index: 1000;
   -webkit-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
 
@@ -493,6 +507,7 @@ body {
   width: auto;
   display: block;
   -webkit-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
 
@@ -513,6 +528,8 @@ body {
   background-image: none;
   position: relative;
   border-bottom: 1px solid #000;
+  -webkit-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
   transition: all 300ms linear;
 }
 
@@ -526,6 +543,8 @@ body {
   left: 0;
   content: "";
   z-index: 2;
+  -webkit-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
   transition: all 300ms linear;
 }
 
@@ -534,10 +553,14 @@ body {
 }
 
 .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
 .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
+  -webkit-transform: translateY(8px) rotate(-45deg);
+  -ms-transform: translateY(8px) rotate(-45deg);
   transform: translateY(8px) rotate(-45deg);
 }
 
@@ -548,6 +571,8 @@ body {
 .nav-link {
   color: #212121 !important;
   font-weight: 500;
+  -webkit-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 
@@ -574,6 +599,8 @@ body {
   content: "";
   background-color: #2b8d7b;
   opacity: 0;
+  -webkit-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 
@@ -588,6 +615,8 @@ body {
 
 .nav-item {
   position: relative;
+  -webkit-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 
@@ -596,6 +625,8 @@ body {
 
 .bg-light {
   background-color: #c5d9e7 !important;
+  -webkit-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 
@@ -619,6 +650,8 @@ body {
   left: 0;
   width: 100%;
   margin-top: 40px;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   z-index: 20;
 }
@@ -636,156 +669,230 @@ p {
   margin: 0;
   padding-top: 10px;
   opacity: 1;
+  -webkit-transform: translate(0);
+  -ms-transform: translate(0);
   transform: translate(0);
+  -webkit-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
   transition: all 300ms linear;
+  -webkit-transition-delay: 1700ms;
+  -o-transition-delay: 1700ms;
   transition-delay: 1700ms;
 }
 
 body.hero-anime p {
   opacity: 0;
+  -webkit-transform: translateY(40px);
+  -ms-transform: translateY(40px);
   transform: translateY(40px);
+  -webkit-transition-delay: 1700ms;
+  -o-transition-delay: 1700ms;
   transition-delay: 1700ms;
 }
 
 h1 span {
   display: inline-block;
+  -webkit-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
   transition: all 300ms linear;
   opacity: 1;
+  -webkit-transform: translate(0);
+  -ms-transform: translate(0);
   transform: translate(0);
 }
 
 body.hero-anime h1 span:nth-child(1) {
   opacity: 0;
+  -webkit-transform: translateY(-20px);
+  -ms-transform: translateY(-20px);
   transform: translateY(-20px);
 }
 
 body.hero-anime h1 span:nth-child(2) {
   opacity: 0;
+  -webkit-transform: translateY(-30px);
+  -ms-transform: translateY(-30px);
   transform: translateY(-30px);
 }
 
 body.hero-anime h1 span:nth-child(3) {
   opacity: 0;
+  -webkit-transform: translateY(-50px);
+  -ms-transform: translateY(-50px);
   transform: translateY(-50px);
 }
 
 body.hero-anime h1 span:nth-child(4) {
   opacity: 0;
+  -webkit-transform: translateY(-10px);
+  -ms-transform: translateY(-10px);
   transform: translateY(-10px);
 }
 
 body.hero-anime h1 span:nth-child(5) {
   opacity: 0;
+  -webkit-transform: translateY(-50px);
+  -ms-transform: translateY(-50px);
   transform: translateY(-50px);
 }
 
 body.hero-anime h1 span:nth-child(6) {
   opacity: 0;
+  -webkit-transform: translateY(-20px);
+  -ms-transform: translateY(-20px);
   transform: translateY(-20px);
 }
 
 body.hero-anime h1 span:nth-child(7) {
   opacity: 0;
+  -webkit-transform: translateY(-40px);
+  -ms-transform: translateY(-40px);
   transform: translateY(-40px);
 }
 
 body.hero-anime h1 span:nth-child(8) {
   opacity: 0;
+  -webkit-transform: translateY(-10px);
+  -ms-transform: translateY(-10px);
   transform: translateY(-10px);
 }
 
 body.hero-anime h1 span:nth-child(9) {
   opacity: 0;
+  -webkit-transform: translateY(-30px);
+  -ms-transform: translateY(-30px);
   transform: translateY(-30px);
 }
 
 body.hero-anime h1 span:nth-child(10) {
   opacity: 0;
+  -webkit-transform: translateY(-20px);
+  -ms-transform: translateY(-20px);
   transform: translateY(-20px);
 }
 
 h1 span:nth-child(1) {
+  -webkit-transition-delay: 1000ms;
+  -o-transition-delay: 1000ms;
   transition-delay: 1000ms;
 }
 
 h1 span:nth-child(2) {
+  -webkit-transition-delay: 700ms;
+  -o-transition-delay: 700ms;
   transition-delay: 700ms;
 }
 
 h1 span:nth-child(3) {
+  -webkit-transition-delay: 900ms;
+  -o-transition-delay: 900ms;
   transition-delay: 900ms;
 }
 
 h1 span:nth-child(4) {
+  -webkit-transition-delay: 800ms;
+  -o-transition-delay: 800ms;
   transition-delay: 800ms;
 }
 
 h1 span:nth-child(5) {
+  -webkit-transition-delay: 1000ms;
+  -o-transition-delay: 1000ms;
   transition-delay: 1000ms;
 }
 
 h1 span:nth-child(6) {
+  -webkit-transition-delay: 700ms;
+  -o-transition-delay: 700ms;
   transition-delay: 700ms;
 }
 
 h1 span:nth-child(7) {
+  -webkit-transition-delay: 900ms;
+  -o-transition-delay: 900ms;
   transition-delay: 900ms;
 }
 
 h1 span:nth-child(8) {
+  -webkit-transition-delay: 800ms;
+  -o-transition-delay: 800ms;
   transition-delay: 800ms;
 }
 
 h1 span:nth-child(9) {
+  -webkit-transition-delay: 600ms;
+  -o-transition-delay: 600ms;
   transition-delay: 600ms;
 }
 
 h1 span:nth-child(10) {
+  -webkit-transition-delay: 700ms;
+  -o-transition-delay: 700ms;
   transition-delay: 700ms;
 }
 
 body.hero-anime h1 span:nth-child(11) {
   opacity: 0;
+  -webkit-transform: translateY(30px);
+  -ms-transform: translateY(30px);
   transform: translateY(30px);
 }
 
 body.hero-anime h1 span:nth-child(12) {
   opacity: 0;
+  -webkit-transform: translateY(50px);
+  -ms-transform: translateY(50px);
   transform: translateY(50px);
 }
 
 body.hero-anime h1 span:nth-child(13) {
   opacity: 0;
+  -webkit-transform: translateY(20px);
+  -ms-transform: translateY(20px);
   transform: translateY(20px);
 }
 
 body.hero-anime h1 span:nth-child(14) {
   opacity: 0;
+  -webkit-transform: translateY(30px);
+  -ms-transform: translateY(30px);
   transform: translateY(30px);
 }
 
 body.hero-anime h1 span:nth-child(15) {
   opacity: 0;
+  -webkit-transform: translateY(50px);
+  -ms-transform: translateY(50px);
   transform: translateY(50px);
 }
 
 h1 span:nth-child(11) {
+  -webkit-transition-delay: 1300ms;
+  -o-transition-delay: 1300ms;
   transition-delay: 1300ms;
 }
 
 h1 span:nth-child(12) {
+  -webkit-transition-delay: 1500ms;
+  -o-transition-delay: 1500ms;
   transition-delay: 1500ms;
 }
 
 h1 span:nth-child(13) {
+  -webkit-transition-delay: 1400ms;
+  -o-transition-delay: 1400ms;
   transition-delay: 1400ms;
 }
 
 h1 span:nth-child(14) {
+  -webkit-transition-delay: 1200ms;
+  -o-transition-delay: 1200ms;
   transition-delay: 1200ms;
 }
 
 h1 span:nth-child(15) {
+  -webkit-transition-delay: 1450ms;
+  -o-transition-delay: 1450ms;
   transition-delay: 1450ms;
 }
 
@@ -793,6 +900,7 @@ h1 span:nth-child(15) {
 #circle {
   cursor: pointer;
   -webkit-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
   transition: all 300ms linear;
 }
 
@@ -807,14 +915,24 @@ h1 span:nth-child(15) {
   margin: 0 auto;
   text-align: center;
   opacity: 1;
+  -webkit-transform: translate(0);
+  -ms-transform: translate(0);
   transform: translate(0);
+  -webkit-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
   transition: all 300ms linear;
+  -webkit-transition-delay: 1900ms;
+  -o-transition-delay: 1900ms;
   transition-delay: 1900ms;
 }
 
 body.hero-anime #switch {
   opacity: 0;
+  -webkit-transform: translateY(40px);
+  -ms-transform: translateY(40px);
   transform: translateY(40px);
+  -webkit-transition-delay: 1900ms;
+  -o-transition-delay: 1900ms;
   transition-delay: 1900ms;
 }
 
@@ -835,11 +953,14 @@ body.hero-anime #switch {
 
 .switched #circle {
   left: 43px;
+  -webkit-box-shadow: 0 4px 4px rgba(26, 53, 71, 0.25),
+    0 0 0 1px rgba(26, 53, 71, 0.07);
   box-shadow: 0 4px 4px rgba(26, 53, 71, 0.25), 0 0 0 1px rgba(26, 53, 71, 0.07);
   background: #fff;
 }
 
 .nav-item .dropdown-menu {
+  -webkit-transform: translate3d(0, 10px, 0);
   transform: translate3d(0, 10px, 0);
   visibility: hidden;
   opacity: 0;
@@ -847,6 +968,8 @@ body.hero-anime #switch {
   display: block;
   padding: 0;
   margin: 0;
+  -webkit-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
   transition: all 200ms linear;
 }
 
@@ -854,6 +977,7 @@ body.hero-anime #switch {
   opacity: 1;
   visibility: visible;
   max-height: 999px;
+  -webkit-transform: translate3d(0, 0px, 0);
   transform: translate3d(0, 0px, 0);
 }
 
@@ -893,10 +1017,14 @@ body.hero-anime #switch {
     border: none;
     background-color: #000;
     vertical-align: 0;
+    -webkit-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
     transition: all 200ms linear;
   }
 
   .dropdown-toggle[aria-expanded="true"]::after {
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
     transform: rotate(90deg);
     opacity: 0;
   }
@@ -904,7 +1032,10 @@ body.hero-anime #switch {
   .dropdown-menu {
     padding: 0 !important;
     background-color: transparent;
+    -webkit-box-shadow: none;
     box-shadow: none;
+    -webkit-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
     transition: all 200ms linear;
   }
 
