--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,14 @@ body {
 
 #eat-button,
 #drink-button {
+  background: none !important;
   border: none;
+
+  font-family: arial, sans-serif;
+  /*input has OS specific font-family*/
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
   display: inline-block;
   border-radius: 4px;
 }
@@ -170,7 +177,7 @@ ul.social-network li {
   width: 450px;
   height: 130px;
   background-color: white;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .white-box .btn {
@@ -178,6 +185,7 @@ ul.social-network li {
   height: 50px;
   margin: auto;
   display: block;
+  overflow-x: hidden;
 }
 
 /* .full-width {
