adding webkits etc

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,9 @@
 /* RENT + JOIN HTML  */
 
 .parallax-wrapper {
+  -webkit-perspective: 1px;
   perspective: 1px;
+  -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   height: 100vh;
   overflow-x: hidden;
@@ -10,14 +12,23 @@
 .background {
   background-position: center;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 auto;
   flex: 1 0 auto;
   position: relative;
   z-index: -1;
   height: 100vh;
   width: 100vw;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-transform: translateZ(-1px) scale(2);
   transform: translateZ(-1px) scale(2);
 }
 .background--rent {
@@ -55,10 +66,13 @@
   padding: 3rem;
   height: 100vh;
   margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .desc-wrapper {
   margin: auto;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 .season--title {
@@ -136,7 +150,10 @@
   border-radius: 4px;
   text-indent: 10px;
   color: #888;
+  -webkit-transition: all 0.6s ease;
+  -o-transition: all 0.6s ease;
   transition: all 0.6s ease;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   position: relative;
 }
@@ -152,6 +169,8 @@
   display: inline-block;
   border: none;
   border-radius: 4px;
+  -webkit-transition: all 0.6s ease;
+  -o-transition: all 0.6s ease;
   transition: all 0.6s ease;
   resize: none;
   text-indent: 10px;
@@ -184,6 +203,8 @@
   font-size: 16px;
   font-weight: bold;
   color: #c5d9e7;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 .name button:hover {
